--- a/18_login_board_springbootMVC/src/main/resources/application.properties
+++ b/18_login_board_springbootMVC/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.application.name=15_schedule_springMVC_boot
-
-#server port설정
-server.port=9080
+# server port 설정하기
+server.port=9090
 
 #jsp를 사용할 경우 - 추가적으로 의존성 추가해야함
 #spring.mvc.view.prefix=/WEB-INF/views/
@@ -15,8 +13,10 @@ spring.thymeleaf.enabled=true
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
 #cache 활성화 여부, 개발환경시에는 비 활성화
 spring.thymeleaf.cache=false
+
 #template 인코딩
 spring.thymeleaf.encoding=UTF-8
 #기본 template모드 html,xml,text, js 등
@@ -31,10 +31,16 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/hkeduweb
 spring.datasource.username=root
 spring.datasource.password=132416
+
 #mybatis 설정
-# 설정한 패키지 안에 클래스들의 이름으로 aliase를 사용
 mybatis.type-aliases-package=com.hk.board.dtos
 mybatis.mapper-locations=classpath:/mybatis/**/*.xml
+
+#파일 한개당 사이즈
+spring.servlet.multipart.max-file-size = 100MB
+#요청당 최대 파일 사이즈
+spring.servlet.multipart.max-request-size = 100MB
+
 # encoding
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
