--- a/18_login_board_springbootMVC/src/main/resources/application.properties
+++ b/18_login_board_springbootMVC/src/main/resources/application.properties
@@ -45,3 +45,7 @@ spring.servlet.multipart.max-request-size = 100MB
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
+
+#file path
+resource.path=file:///d:/resource/
+upload.path=/img/**
