--- a/FinalProject/pom.xml
+++ b/FinalProject/pom.xml
@@ -110,6 +110,12 @@
            <version>2.15.2</version>   
          </dependency>
 
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.1</version>
+    <scope>provided</scope>
+</dependency>
     </dependencies>
 
     <build>
